--- a/Cargo.toml
+++ b/Cargo.toml
@@ -143,7 +143,7 @@ version = "0.2.45"
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 console_log = "0.2"
 
-[workspace]
-members = [
-    "run-wasm",
-]
+# [workspace]
+# members = [
+#     "run-wasm",
+# ]
