--- a/Cargo.toml
+++ b/Cargo.toml
@@ -155,7 +155,7 @@ version = "0.2.45"
 console_log = "0.2"
 web-sys = { version = "0.3.22", features = ['CanvasRenderingContext2d'] }
 
-# [workspace]
-# members = [
-#     "run-wasm",
-# ]
+[workspace]
+members = [
+    "run-wasm",
+]
